--- a/CanibaApplicationideia desing/public_html/index.html
+++ b/CanibaApplicationideia desing/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <meta charset="">
+        
         <title>TheEvent - Bootstrap Event Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
@@ -55,12 +55,12 @@
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="#intro">Home</a></li>
                         <li><a href="#about">Sobre</a></li>
-                        <li><a href="#speakers">Palestrantes</a></li>
+                        <li><a href="#speakers">Destaques</a></li>
                         <li><a href="#schedule">Endereço</a></li>
                         <li><a href="#venue">Venue</a></li>
-                        <li><a href="#hotels">Hotels</a></li>
+                        <li><a href="#hotels">Hotéis</a></li>
                         <li><a href="#gallery">Galeria</a></li>
-                        <li><a href="#supporters">Sócios</a></li>
+                        <li><a href="#supporters">Parcerias</a></li>
                         <li><a href="#contact">Contatos</a></li>
                         <li class="buy-tickets"><a href="#buy-tickets">Ingressos</a></li>
                     </ul>
@@ -143,8 +143,8 @@
                             <div class="speaker">
                                 <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
                                 <div class="details">
-                                    <h3><a href="speaker-details.html">Stand Up Comedy</a></h3>
-                                    <p>Venha rir você também!</p>
+                                    <h3><a href="speaker-details.html">Chitãozinho e Xororó</a></h3>
+                                    <p>Música sertaneja raiz.</p>
                                     <div class="social">
                                         <a href=""><i class="fa fa-twitter"></i></a>
                                         <a href=""><i class="fa fa-facebook"></i></a>
@@ -197,8 +197,7 @@
                         </li>
                     </ul>
 
-                    <h3 class="sub-heading">Voluptatem nulla veniam soluta et corrupti consequatur neque eveniet officia. Eius
-                        necessitatibus voluptatem quis labore perspiciatis quia.</h3>
+                    <h3 class="sub-heading">A seguir, segue os eventos em ordem cronológica em que anunciamos</h3>
 
                     <div class="tab-content row justify-content-center">
 
@@ -206,76 +205,72 @@
                         <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>09:30 AM</time></div>
-                                <div class="col-md-10">
-                                    <h4>Registration</h4>
-                                    <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
-                                </div>
+
                             </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>10:00 AM</time></div>
+                                <div class="col-md-2"><time>01/11 ás 23:00 até 01:30</time></div>
                                 <div class="col-md-10">
                                     <div class="speaker">
-                                        <img src="img/speakers/1.jpg" alt="Brenden Legros">
+                                        <img src="img/speakers/7.jpg" alt="Brenden Legros">
                                     </div>
-                                    <h4>Keynote <span>Brenden Legros</span></h4>
-                                    <p>Facere provident incidunt quos voluptas.</p>
+                                    <h4>Stand up comedy <span>Danilo Gentili</span></h4>
+                                    <p>Toda sexta-feira ás 23:00, venha "levantar" o humor com Danilo Gentili!.</p>
                                 </div>
                             </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>11:00 AM</time></div>
+                                <div class="col-md-2"><time>10/11 ás 14:00 até as 17:00</time></div>
                                 <div class="col-md-10">
                                     <div class="speaker">
                                         <img src="img/speakers/2.jpg" alt="Hubert Hirthe">
                                     </div>
-                                    <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                                    <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                                    <h4>Show sertanejo <span>Chitãozinho e Xororó</span></h4>
+                                    <p>Uma das maiores e mais tradicionais duplas sertaneja, irão se apresentar numa tarde de domingo de tirar o fólego!</p>
                                 </div>
                             </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>12:00 AM</time></div>
+                                <div class="col-md-2"><time>15/11 até 17/11</time></div>
                                 <div class="col-md-10">
                                     <div class="speaker">
                                         <img src="img/speakers/3.jpg" alt="Cole Emmerich">
                                     </div>
-                                    <h4>Explicabo et rerum quis et ut ea. <span>Cole Emmerich</span></h4>
-                                    <p>Veniam accusantium laborum nihil eos eaque accusantium aspernatur.</p>
+                                    <h4>GP interlagos <span>Fórmula 1</span></h4>
+                                    <p>Na reta final do campeonato de fórmula 1 liderado pelo imparável inglês Lewis Hamilton, cada cavalo de potência vai contar para definir o vencedor dessa etapa!</p>
                                 </div>
                             </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>02:00 PM</time></div>
+                                <div class="col-md-2"><time>07/11 até 30/11</time></div>
                                 <div class="col-md-10">
                                     <div class="speaker">
-                                        <img src="img/speakers/4.jpg" alt="Jack Christiansen">
+                                        <img src="img/speakers/5.png" alt="Jack Christiansen">
                                     </div>
-                                    <h4>Qui non qui vel amet culpa sequi. <span>Jack Christiansen</span></h4>
-                                    <p>Nam ex distinctio voluptatem doloremque suscipit iusto.</p>
+                                    <h4>Museu do video game <span>Shopping Itaquera</span></h4>
+                                    <p>Vários jogos, várias histórias, aqui você joga jogos de todas as eras e participa dos torneios diários.</p>
                                 </div>
                             </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>03:00 PM</time></div>
+                                <div class="col-md-2"><time>21/12 e 22/12 ás 10:00 até 21:00</time></div>
                                 <div class="col-md-10">
                                     <div class="speaker">
-                                        <img src="img/speakers/5.jpg" alt="Alejandrin Littel">
+                                        <img src="img/speakers/1.jpg" alt="Alejandrin Littel">
                                     </div>
-                                    <h4>Quos ratione neque expedita asperiores. <span>Alejandrin Littel</span></h4>
-                                    <p>Eligendi quo eveniet est nobis et ad temporibus odio quo.</p>
+                                    <h4>Evento Geek e cultura oriental <span>Ressaca friends</span></h4>
+                                    <p>Desde mangás até comidas orientais, temos tudo de novidade vindas direto da Ásia com até participações de bandas Japonesas, Coreanas e Chinesas.</p>
                                 </div>
                             </div>
 
                             <div class="row schedule-item">
-                                <div class="col-md-2"><time>04:00 PM</time></div>
+                                <div class="col-md-2"><time>31/12 ás 23:30 até as 00:30</time></div>
                                 <div class="col-md-10">
                                     <div class="speaker">
                                         <img src="img/speakers/6.jpg" alt="Willow Trantow">
                                     </div>
-                                    <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
-                                    <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
+                                    <h4>Show do Reveillon <span>Roberto Carlos</span></h4>
+                                    <p>São tantas emoções...Vamos virar o ano ao som de nosso amado rei!</p>
                                 </div>
                             </div>
 
@@ -608,8 +603,8 @@
 
                 <div class="container">
                     <div class="section-header">
-                        <h2>Gallery</h2>
-                        <p>Check our gallery from the recent events</p>
+                        <h2>Galeria</h2>
+                        <p>Veja algumas de nossas imagens tiradas de nossos eventos</p>
                     </div>
                 </div>
 
@@ -633,7 +628,7 @@
 
                 <div class="container">
                     <div class="section-header">
-                        <h2>Sponsors</h2>
+                        <h2>Parcerias</h2>
                     </div>
 
                     <div class="row no-gutters supporters-wrap clearfix">
@@ -726,24 +721,24 @@
                                 </li>
 
                                 <li>
-                                    <a data-toggle="collapse" href="#faq3" class="collapsed">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="fa fa-minus-circle"></i></a>
+                                    <a data-toggle="collapse" href="#faq3" class="collapsed">Quais vantagens eu terei ao inscrever meu e-mail na Newsletter (Boletim informativo)? <i class="fa fa-minus-circle"></i></a>
                                     <div id="faq3" class="collapse" data-parent="#faq-list">
                                         <p>
-                                            Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                                            Além da informação adicional sobre algo qe irá ocorrer tal como, celebridade X irá comparecer no evento Y, um método simples e prático de interação da nossa empresa com os clientes, eventualmente pode haver códigos promocionais temporariamente limitados.
                                         </p>
                                     </div>
                                 </li>
 
                                 <li>
-                                    <a data-toggle="collapse" href="#faq4" class="collapsed">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="fa fa-minus-circle"></i></a>
+                                    <a data-toggle="collapse" href="#faq4" class="collapsed">Comprei o ingresso porém não irei poder comparecer, e agora? <i class="fa fa-minus-circle"></i></a>
                                     <div id="faq4" class="collapse" data-parent="#faq-list">
                                         <p>
-                                            Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                                            Caso falte no máximo 48 horas antecedentes do evento, entre em contato conosco (link abaixo) para avaliarmos a possibilidade de reembolso. Aconselhamos aos clientes a passarem ou presentear o ingresso a alguém nessas situações.<a href="#contact">Contatos</a>
                                         </p>
                                     </div>
                                 </li>
 
-                                <li>
+                               <!-- <li>
                                     <a data-toggle="collapse" href="#faq5" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="fa fa-minus-circle"></i></a>
                                     <div id="faq5" class="collapse" data-parent="#faq-list">
                                         <p>
@@ -759,7 +754,7 @@
                                             Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
                                         </p>
                                     </div>
-                                </li>
+                                </li>-->
 
                             </ul>
                         </div>
@@ -775,10 +770,9 @@
             <section id="subscribe">
                 <div class="container wow fadeInUp">
                     <div class="section-header">
-                        <h2>Newsletter</h2>
-                        <p>Rerum numquam illum recusandae quia mollitia consequatur.</p>
+                        <h2>Newsletter (Boletim informativo)</h2>
+                        <p>Se inscreva na nossa Newsletter para obter informações a respeito dos enventos e nossas<br> promoções apenas nos dando seu email!.</p>
                     </div>
-
                     <form method="POST" action="#">
                         <div class="form-row justify-content-center">
                             <div class="col-auto">
@@ -800,16 +794,16 @@
                 <div class="container">
 
                     <div class="section-header">
-                        <h2>Buy Tickets</h2>
-                        <p>Velit consequatur consequatur inventore iste fugit unde omnis eum aut.</p>
+                        <h2>Anuncie seu evento!</h2>
+                        <p>Veja a seguir, os planos de anúncio para o seu evento.</p>
                     </div>
 
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
-                                    <h5 class="card-title text-muted text-uppercase text-center">Standard Access</h5>
-                                    <h6 class="card-price text-center">$150</h6>
+                                    <h5 class="card-title text-muted text-uppercase text-center">Eventos gratuitos</h5>
+                                    <h6 class="card-price text-center">Grátis</h6>
                                     <hr>
                                     <ul class="fa-ul">
                                         <li><span class="fa-li"><i class="fa fa-check"></i></span>Regular Seating</li>
