--- a/CanibaApplicationideia desing/public_html/speaker-details - Copia - Copia.html
+++ b/CanibaApplicationideia desing/public_html/speaker-details - Copia - Copia.html
@@ -71,27 +71,27 @@
     <section id="speakers-details" class="wow fadeIn">
       <div class="container">
         <div class="section-header">
-          <h2>Ressaca Friends</h2>
-          <p>Evento Geek e cultura oriental.</p>
+          <h2>Fórmula 1</h2>
+          <p>Grande prêmio de Interlagos</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
-            <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="img/speakers/3.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Ressaca Friends</h2>
+              <h2>Grande Prêmio de Interlagos</h2>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Todo final de ano, um dos eventos mais aclamados pela comunidade Geek e otaku ocorre, o Ressaca Friends!</p>
+              <p>Estamos na reta final da competição mais veloz do planeta, será que Lewis Hamilton será o mais uma vez campeão mundial pela a equipe Mercedez-Benz?</p>
  
-              <p>O evento vai muito além das atrações trazidas diretamente do oriente, também é uma grande oportunidade para empresas anunciarem as novidades que estão por vir, lançar capítulos dos mangás traduzidos, comer comidas exóticas e passar um bom tempo na área de free play.</p> 
+              <p>Já estão disponíveis os ingressos para o grande prêmio de interlagos, onde que se fez muita história e emoção a mais de 300km/h nas retas desse circuito, preparem os motores, a largada está próxima!</p> 
 
             </div>
           </div>
@@ -285,6 +285,46 @@
 
             </section>
 
+
+                </div>
+
+                <!-- Modal Order Form -->
+                <div id="buy-ticket-modal" class="modal fade">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Comprar</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form method="POST" action="#">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" name="your-name" placeholder="Your Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" name="your-email" placeholder="Your Email">
+                                    </div>
+                                    <div class="form-group">
+                                        <select id="ticket-type" name="ticket-type" class="form-control" >
+                                            <option value="">-- Select Your Ticket Type --</option>
+                                            <option value="standard-access">Standard Access</option>
+                                            <option value="pro-access">Pro Access</option>
+                                            <option value="premium-access">Premium Access</option>
+                                        </select>
+                                    </div>
+                                    <div class="text-center">
+                                        <button type="submit" class="btn">Comprar</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div><!-- /.modal-content -->
+                    </div><!-- /.modal-dialog -->
+                </div><!-- /.modal -->
+
+            </section>
+
             <section id="venue" class="wow fadeInUp">
 
                 <div class="container-fluid">
@@ -294,7 +334,7 @@
                         <p>Segue abaixo a localização do evento</p>
                     </div>
                             <center>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12305.93652582861!2d-46.66060637596388!3d-23.511747380110076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef7f63fc2b1c7%3A0x63c9c4da57b73508!2sPRO%20MAGNO%20Centro%20de%20Eventos!5e0!3m2!1spt-BR!2sbr!4v1572249467599!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.7906745086907!2d-46.7260086845811!3d-23.6476663846401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce510dd7600f91%3A0xc3c8ab63088ed8c2!2sAv.%20das%20Na%C3%A7%C3%B5es%20Unidas%2C%2017955%20-%20Vila%20Almeida%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1572252885388!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 							</center>
 						</div>
                 </div>
