--- a/CanibaApplicationideia desing/public_html/speaker-details - Copia.html
+++ b/CanibaApplicationideia desing/public_html/speaker-details - Copia.html
@@ -71,27 +71,27 @@
     <section id="speakers-details" class="wow fadeIn">
       <div class="container">
         <div class="section-header">
-          <h2>Ressaca Friends</h2>
-          <p>Evento Geek e cultura oriental.</p>
+          <h2>Chitãozinho e Xororó</h2>
+          <p>Música sertaneja raiz</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
-            <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
+            <img src="img/speakers/2.jpg" alt="Speaker 1" class="img-fluid">
           </div>
 
           <div class="col-md-6">
             <div class="details">
-              <h2>Ressaca Friends</h2>
+              <h2>Chitãozinho e Xororó</h2>
               <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
               </div>
-              <p>Todo final de ano, um dos eventos mais aclamados pela comunidade Geek e otaku ocorre, o Ressaca Friends!</p>
+              <p>Para você que veio do sertão, e para você que não veio também, vem em breve, música sertaneja das boas!</p>
  
-              <p>O evento vai muito além das atrações trazidas diretamente do oriente, também é uma grande oportunidade para empresas anunciarem as novidades que estão por vir, lançar capítulos dos mangás traduzidos, comer comidas exóticas e passar um bom tempo na área de free play.</p> 
+              <p>Já estão disponíveis os ingressos para o show de uma das duplas mais tradicionais da música nacional, a dupla sertaneja que despensa apresentações, Chitãozinho e Xororó. Adquira já seu ingresso para não ficar de fora!</p> 
 
             </div>
           </div>
@@ -107,89 +107,19 @@
                         <h2>Ingressos</h2>
                         <p>Veja a seguir, os planos de anúncio para o seu evento.</p>
                     </div>
-
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="card mb-5 mb-lg-0">
-                                <div class="card-body">
-                                    <h5 class="card-title text-muted text-uppercase text-center">Ingresso</h5>
-                                    <h6 class="card-price text-center">Meia - Sábado<br> 21/12</h6>
-                                    <hr>
-                                    <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Sábado</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Entrada Domingo</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Vários brindes</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Credencial Especial</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserva Auditório</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Todos os Meet & Greet</li>
-                                    </ul>
-                                    <hr>
-                                    <div class="text-center">
-                                        <button type="button" class="btn" data-toggle="modal" data-target="#buy-ticket-modal" data-ticket-type="standard-access">Comprar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="card mb-5 mb-lg-0">
-                                <div class="card-body">
-                                    <h5 class="card-title text-muted text-uppercase text-center">Ingresso</h5>
-                                    <h6 class="card-price text-center">Inteira - Sábado<br> 21/12</h6>
-                                    <hr>
-                                    <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Sábado</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Entrada Domingo</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Vários brindes</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Credencial Especial</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserva Auditório</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Todos os Meet & Greet</li>
-                                    </ul>
-                                    <hr>
-                                    <div class="text-center">
-                                        <button type="button" class="btn" data-toggle="modal" data-target="#buy-ticket-modal" data-ticket-type="pro-access">Comprar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Pro Tier -->
-                        <div class="col-lg-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title text-muted text-uppercase text-center">Ingresso</h5>
-                                    <h6 class="card-price text-center">Meia - Domingo 22/12</h6>
-                                    <hr>
-                                    <ul class="fa-ul">
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Entrada Sábado</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Domingo</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Vários brindes</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Credencial Especial</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserva Auditório</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Todos os Meet & Greet</li>
-                                    </ul>
-                                    <hr>
-                                    <div class="text-center">
-                                        <button type="button" class="btn" data-toggle="modal" data-target="#buy-ticket-modal" data-ticket-type="premium-access">Comprar</button>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-					<br>
 					<div class="row">
                         <div class="col-lg-4">
                             <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
                                     <h5 class="card-title text-muted text-uppercase text-center">Ingresso</h5>
-                                    <h6 class="card-price text-center">Inteira - Domingo 22/12</h6>
+                                    <h6 class="card-price text-center">Inteira</h6>
                                     <hr>
                                     <ul class="fa-ul">
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Entrada Sábado</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Domingo</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Vários brindes</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Antecipada</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reservas especiais</li>
                                         <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Credencial Especial</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserva Auditório</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Todos os Meet & Greet</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Fotos e autógrafos</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Coletiva de imprensa</li>
                                     </ul>
                                     <hr>
                                     <div class="text-center">
@@ -202,15 +132,15 @@
                             <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
                                     <h5 class="card-title text-muted text-uppercase text-center">Ingresso VIP</h5>
-                                    <h6 class="card-price text-center">Ingresso - dias 21/12 e 22/12</h6>
+                                    <h6 class="card-price text-center">Ingresso VIP</h6>
                                     <hr>
                                     <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Sábado</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Domingo</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Vários brindes</li>
+                                        
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Antecipada</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Reservas especiais</li>
                                         <li><span class="fa-li"><i class="fa fa-check"></i></span>Credencial Especial</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Reserva Auditório</li>
-                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Todos os Meet & Greet</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Fotos e autógrafos</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Coletiva de imprensa</li>
 										
                                     </ul>
                                     <hr>
@@ -225,15 +155,14 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title text-muted text-uppercase text-center">Ingresso Premium</h5>
-                                    <h6 class="card-price text-center">Ingresso - dias 21/12 e 22/12</h6>
+                                    <h6 class="card-price text-center">Premium</h6>
                                     <hr>
                                     <ul class="fa-ul">
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Sábado</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Domingo</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Vários brindes</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Entrada Antecipada</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Reservas especiais</li>
                                         <li><span class="fa-li"><i class="fa fa-check"></i></span>Credencial Especial</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Reserva Auditório</li>
-                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Todos os Meet & Greet</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Fotos e autógrafos</li>
+                                        <li><span class="fa-li"><i class="fa fa-check"></i></span>Coletiva de imprensa</li>
                                     </ul>
                                     <hr>
                                     <div class="text-center">
@@ -294,7 +223,7 @@
                         <p>Segue abaixo a localização do evento</p>
                     </div>
                             <center>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12305.93652582861!2d-46.66060637596388!3d-23.511747380110076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef7f63fc2b1c7%3A0x63c9c4da57b73508!2sPRO%20MAGNO%20Centro%20de%20Eventos!5e0!3m2!1spt-BR!2sbr!4v1572249467599!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.7906745086907!2d-46.7260086845811!3d-23.6476663846401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce510dd7600f91%3A0xc3c8ab63088ed8c2!2sAv.%20das%20Na%C3%A7%C3%B5es%20Unidas%2C%2017955%20-%20Vila%20Almeida%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1572252885388!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 							</center>
 						</div>
                 </div>
